--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development nodemon --exec tsx server/index.ts",
     "dev:tsx": "NODE_ENV=development tsx server/index.ts",
     "dev:clean": "pkill -f 'tsx server/index.ts' || true && npm run dev",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "vite build && node esbuild.config.js",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
